# media

./: Cargo.toml  README.md  base-dockerfile  compose-test.yaml  compose.yaml  dev-dockerfile  devcontainer-dockerfile  docker-compose-base.yaml  docker-compose-dev.yaml
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: publish-image-nginx.yaml  test-update-schema.yaml  update-infrastructure-docker.yaml  update-schema.yaml
nginx/: default.conf.template  nginx-dockerfile  nginx.conf
src/: authentication.rs  main.rs  media.rs  media_connection.rs  mutation.rs  query.rs
src/event/model/: media_dto.rs  mod.rs
src/graphql/: mutation.rs  query.rs
src/graphql/model/: media.rs  mod.rs
src/graphql/model/connection/: media_connection.rs  mod.rs
