[package]
name = "misarch-media"
version = "0.3.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.16", features = ["bson", "chrono", "uuid", "log"] }
async-graphql-axum = "7.0.16"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
hyper = "1.6.0"
axum = { version = "0.8.3", features = ["macros"] }
serde = "1.0.219"
futures = "0.3.31"
bson = "2.14.0"
clap = { version = "4.5.37", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
json = "0.12.4"
log = "0.4.27"
simple_logger = "5.0.0"
serde_json = "1.0.140"
rust-s3 = "0.33.0"
mime = "0.3.17"
url = "2.5.4"
reqwest =  { version = "0.12.15", features = ["json"] }
opentelemetry = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"]}
opentelemetry-otlp = "0.29.0"
axum-otel-metrics = { path = "axum-otel-metrics" }
once_cell = "1.21.3"
